--- a/src/pages/episodes/2019-01-08-devops.md
+++ b/src/pages/episodes/2019-01-08-devops.md
@@ -1,6 +1,7 @@
 ---
 templateKey: episode
 title: DevOps
+episodeNumber: 1
 file: /assets/podcast-devops.mp3
 date: 2019-01-08T20:13:42.191Z
 description: Miten käy pojilta devops-hommat?
