Update Episode “2019-01-08-devops”

--- a/src/pages/episodes/2019-01-08-devops.md
+++ b/src/pages/episodes/2019-01-08-devops.md
@@ -4,7 +4,7 @@ title: DevOps
 episodeNumber: 1
 file: /assets/podcast-devops.mp3
 date: 2019-01-08T20:13:42.191Z
-description: Miten käy pojilta devops-hommat?
+description: Miten käy pojilta devops-hommat? Kuuntele niin tiedät!
 tags:
   - devops
 ---
