Update Episode “2019-01-08-devops”

--- a/src/pages/episodes/2019-01-08-devops.md
+++ b/src/pages/episodes/2019-01-08-devops.md
@@ -7,5 +7,7 @@ date: 2019-01-08T20:13:42.191Z
 description: Miten käy pojilta devops-hommat? Kuuntele niin tiedät!
 tags:
   - devops
+hosts:
+  - Niko
 ---
 Ensimmäinen jakso jolla testaillaan miten homma skulaa!
