Works with more than 1 episode now, separate layout to own component

--- a/src/pages/episodes/2.md
+++ b/src/pages/episodes/2.md
@@ -1,7 +1,7 @@
 ---
 templateKey: episode
 title: Design systems
-episodeNumber: '2'
+slug: '2'
 file: /assets/podcast-devops.mp3
 date: 2019-08-14T11:29:50.907Z
 description: Second episode test!
