Add episode for Tekninen Velka

--- a/src/pages/episodes/2.md
+++ b/src/pages/episodes/2.md
@@ -1,13 +1,13 @@
 ---
 templateKey: episode
-title: Design systems
+title: Tekninen velka
 slug: '2'
-file: /assets/podcast-devops.mp3
+file: /assets/podcast-tekninen-velka.mp3
 date: 2019-08-14T11:29:50.907Z
-description: Second episode test!
+description: Mitä on tekninen velka ja mistä pankista sitä nostetaan?
 tags:
   - design
 hosts:
   - Niko
 ---
-We talk about design stuff this time.
+Tekninen velka on jännä juttu.
